add_subdirectory("test_protobuf")
add_subdirectory("test_qml")
add_subdirectory("test_protobuf_multifile")
add_subdirectory("test_qprotobuf_serializer_plugin")
add_subdirectory("test_wellknowntypes")
add_subdirectory("test_qttypes")
if(gRPC_FOUND)
    add_subdirectory("test_grpc")
    add_subdirectory("test_grpc_qml")
else()
    message(WARNING "gRPC not found: some tests cannot be built.")
endif()
